HEAD
	+ Enforce uniqueness of 'user/group' filed in shares permissions
	+ Enable full audit feature as it's working again in samba 3.4.6
1.5.1
	+ Add support for file system ACLs. Modify /etc/fstab
	  accordingly. Add dependency on acl.
	+ Bug fix: check if a group has been deleted when configurer printers,
	  otherwise users end up with a blank screen when granting printer
	  permissions
	+ Use the new upstart scripts that the Ubuntu samba packages ships
	  in Lucid
1.4.2
	+ Add missing samba_virus_report table
1.4.1
	+ Restored RecycleBin feature lost when merged breadcrumbs
1.3.15
	+ Added 'hide files' directive by default in smb.conf.mas
	+ Bug fix: PDC password policy settings are kept after samba restarts
1.3.14
	+ Add DefaultUser model to be used in users and groups default user
	  template. Admins can select if they wish to enable the file sharing
	  account by default when creating new users.
1.3.13
	+ Disable full_audit until fixed in a newer samba version
1.3.12
	+ Add breadcrumbs
1.3.11
	+ Added report support
1.3.10
	+ bugfix: ignore case when comparing domain and netbios names
	+ Added support for Recycle Bin in shares
	+ bugfix: restore Domain Users with GID 513 and not 512.
	  as this made Domain Admins not work
	+ Remove unused quota related methods
1.3.7
	+ Create .V2 profile directories. Windows Vista looks for them.
	+ remove extendedBackup, data files must be backuped using ebackup
1.3.6
	+ bugfix: do not allow netbios names longer than 15 characters
1.3.4
	+ bugfix: some samba actions never appeared in the access log
1.3.3
	+ bugfix: we dont consults users when users is not configured in EBox::Samba::existsShareResource
1.3.1
	+ bugfix: use right number for Domain Computers group
1.3.0
	+ bugfix: keep sambaMinPwdLength attribute
1.1.30
	+ bugfix: add user works if quota is disabled
	+ bugfix: replaced storeElementByName with store to avoid bug when restoring
1.1.20
	+ samba allows the use of internal virtual ifaces now